fix(button-group): wrap buttons when too wide for group container

--- a/packages/button/button-group.pcss
+++ b/packages/button/button-group.pcss
@@ -2,6 +2,7 @@
 
 .sds-button-group {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--sds-space-gap-small);
 
   &--vertical {
